# web-crawler

./: LICENSE  README.md  docker-compose.yml
app/backend/: Dockerfile  manage.py  pyproject.toml
app/backend/apps/crawler_api/: apps.py  urls.py  utils.py  views.py
app/backend/backend/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
app/backend/tests/unit/: test_utils.py
app/frontend/: Dockerfile  package.json
app/frontend/public/: index.html
app/frontend/src/: App.css  App.js
app/frontend/src/components/CrawlerControl/: CrawlerControl.css  CrowlerControl.js
app/frontend/src/components/Error/: Error.css  Error.js
app/frontend/src/components/Loader/: Loader.css
app/frontend/src/components/Task/: Task.css  Task.js
crawler/: .gitignore  pyproject.toml  setup.cfg
crawler/configs/: supervisord.conf
crawler/crawler/: crawler.py  settings.py  worker.py
crawler/crawler/components/: __init__.py  extractor.py  fetcher.py  types.py
crawler/tests/unit/: conftest.py  test_extractor.py  test_fetcher.py
nginx/: nginx.conf
redis/: redis.conf
