[tool.poetry]
name = "crawler"
version = "0.1.0"
description = "Simple Web Crawler"
authors = ["Ivan Sharapenkov <ivansharapenkov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
