[tool.poetry]
name = "web-crawler-interface-backend"
version = "0.1.0"
description = "HTTP interface for communication with web crawler"
authors = ["Ivan Sharapenkov <ivansharapenkov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
redis = "^4.3.4"
django-rq = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
